--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -28,6 +28,7 @@
 @import "./components/contact-form";
 @import "./components/shopping-cart";
 @import "./components/shopping-cart-item";
+@import "./components/shopping-cart-toggle-button";
 @import "./pages/index";
 @import "./pages/news-detail";
 @import "./pages/lineup";
