--- a/src/css/components/_shopping-cart.scss
+++ b/src/css/components/_shopping-cart.scss
@@ -56,6 +56,7 @@
     bottom: unset;
     left: unset;
     background-color: #192b1f;
+    color: white;
   }
   .c-shopping-cart.c-shopping-cart--collapsed {
     transform: translateX(100%);
