--- a/src/css/components/_shopping-cart-toggle-button.scss
+++ b/src/css/components/_shopping-cart-toggle-button.scss
@@ -23,13 +23,19 @@
   height: 20px;
   width: 20px;
   position: absolute;
-  top: 7px;
+  top: 9px;
   right: 7px;
   max-width: 20px;
+  background-color: $primary;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .c-shopping-cart-toggle-button--counter {
   line-height: 20px;
 
+  font-weight: bold;
+  color: white;
   font-size: 12px;
 
   // max-width: 100%;
