max image width

--- a/src/css/components/_shopping-cart.scss
+++ b/src/css/components/_shopping-cart.scss
@@ -12,6 +12,10 @@
   transform: translateY(100%);
 }
 
+.c-shopping-cart--container {
+  padding: $spacer;
+}
+
 .c-shopping-cart--header {
   display: flex;
   justify-content: end;
