--- a/src/css/components/_shopping-cart-item.scss
+++ b/src/css/components/_shopping-cart-item.scss
@@ -1,3 +1,6 @@
+.c-shopping-cart-item--img {
+  object-fit: contain;
+}
 @include media-breakpoint-up(md) {
   .c-shopping-cart-item {
     color: white;
