--- a/src/css/config/_bootstrap.scss
+++ b/src/css/config/_bootstrap.scss
@@ -69,6 +69,8 @@ $secondary: $color-yellow;
 @import "../../../node_modules/bootstrap/scss/grid";
 @import "../../../node_modules/bootstrap/scss/helpers";
 
+
+
 // 7. Optionally include utilities API last to generate classes based on the Sass map in `_utilities.scss`
 @import "../../../node_modules/bootstrap/scss/utilities/api";
 
@@ -77,3 +79,5 @@ $secondary: $color-yellow;
 @import "../../../node_modules/bootstrap/scss/buttons";
 @import "../../../node_modules/bootstrap/scss/card";
 @import "../../../node_modules/bootstrap/scss/carousel";
+@import "../../../node_modules/bootstrap/scss/navbar";
+@import "../../../node_modules/bootstrap/scss/dropdown";
