--- a/src/css/components/_page.scss
+++ b/src/css/components/_page.scss
@@ -8,7 +8,7 @@
 }
 
 .c-page__title {
-  @extend .mt-5;
+  @extend .mt-3, .mt-md-5;
   text-transform: uppercase;
   font-size: 2.7em;
   letter-spacing: 0.125em;
