--- a/src/css/config/_bootstrap.scss
+++ b/src/css/config/_bootstrap.scss
@@ -1,5 +1,5 @@
-$bootstrap-icons-font-dir: '../../node_modules/bootstrap-icons/font/fonts';
-@import '../../../node_modules/bootstrap-icons/font/bootstrap-icons';
+$bootstrap-icons-font-dir: "../../node_modules/bootstrap-icons/font/fonts";
+@import "../../../node_modules/bootstrap-icons/font/bootstrap-icons";
 
 // Custom.scss
 // Option B: Include parts of Bootstrap
@@ -9,36 +9,34 @@ $bootstrap-icons-font-dir: '../../node_modules/bootstrap-icons/font/fonts';
 
 // 2. Include any default variable overrides here
 
-$carousel-control-color:             $color-yellow;
-$carousel-control-width:             15%;
-$carousel-control-opacity:           .3;
-$carousel-control-icon-width:        4rem;
+$carousel-control-color: $color-yellow;
+$carousel-control-width: 15%;
+$carousel-control-opacity: 0.3;
+$carousel-control-icon-width: 4rem;
 
 // Include any default variable overrides here (though functions won't be available)
 
 // $headings-font-family: 'Roboto Condensed';
 
 $font-family-base: // Cross-platform generic font family (default user interface font)
-    'Roboto Condensed',
-    system-ui,
-    // Safari for macOS and iOS (San Francisco)
-    -apple-system,
-    // Windows
-    "Segoe UI",
-    // Android
-    Roboto,
-    // older macOS and iOS
-    "Helvetica Neue"
-    // Linux
-    "Noto Sans",
-    "Liberation Sans",
-    // Basic web fallback
-    Arial,
-    // Sans serif fallback
-    sans-serif,
-    // Emoji fonts
-    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
-
+  "Roboto Condensed", system-ui,
+  // Safari for macOS and iOS (San Francisco)
+  -apple-system,
+  // Windows
+  "Segoe UI",
+  // Android
+  Roboto,
+  // older macOS and iOS
+  "Helvetica Neue" // Linux
+  "Noto Sans",
+  "Liberation Sans",
+  // Basic web fallback
+  Arial,
+  // Sans serif fallback
+  sans-serif,
+  // Emoji fonts
+  "Apple Color Emoji",
+  "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
 
 $primary: $color-green;
 $secondary: $color-yellow;
@@ -69,8 +67,6 @@ $secondary: $color-yellow;
 @import "../../../node_modules/bootstrap/scss/grid";
 @import "../../../node_modules/bootstrap/scss/helpers";
 
-
-
 // 7. Optionally include utilities API last to generate classes based on the Sass map in `_utilities.scss`
 @import "../../../node_modules/bootstrap/scss/utilities/api";
 
@@ -81,3 +77,4 @@ $secondary: $color-yellow;
 @import "../../../node_modules/bootstrap/scss/carousel";
 @import "../../../node_modules/bootstrap/scss/navbar";
 @import "../../../node_modules/bootstrap/scss/dropdown";
+@import "../../../node_modules/bootstrap/scss/spinners";
