--- a/src/css/components/_navbar.scss
+++ b/src/css/components/_navbar.scss
@@ -7,6 +7,7 @@
     justify-content: flex-end;
     align-items: center;
     z-index: $z-index-navbar;
+    background-color: rgba($color: #000000, $alpha: 0.6);
     padding: 0.5rem;
     transition: background-color 0.25s ease-in;
 }
